crates/vexor-compiler/tests/golden/error/output/fn_missing_body.err
parse error at line 2, column 1
  |
2 | fn double(x)
  | ^
invalid keyword 'export'